--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+
+
 /* Home section styles */
 
 .home {
@@ -40,4 +42,195 @@
 
 .portfolio-link:hover {
   color: #ef7f4d;
+}
+
+/* FAQ section styles */
+
+.question-section {
+  background-color:#fef8f5;
+}
+
+
+
+.accordion-button:hover {
+  color: #ef7f4d!important;
+
+}
+
+
+/* Team members styles */
+/* .members {
+  position: relative;
+}
+
+.member {
+  text-align: center;
+  margin-bottom: 20px;
+ background-color:#343a40!important;
+ position: relative;
+ overflow: hidden;
+}
+
+.member-info {
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  transition: 0.2s;
+}
+
+.member-info-content {
+  position: absolute;
+  left: 50px;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  color:white;
+  opacity: 0;
+  z-index: 1;
+  transition: bottom 0.4s;
+}
+
+.social {
+   position: absolute;
+    left: -50px;
+    top: 0;
+    bottom: 0;
+    width: 50px;
+    transition: left ease-in-out 0.3s;
+    background: rgba(78, 64, 57, 0.6);
+    text-align: center;
+} */
+
+
+/* Clients section styles */
+
+.section-clients {
+  background-color:#fef8f5;
+}
+
+
+.slider-color {
+  color:#eb5d1e!important;
+}
+
+/* Contact section styles */
+
+.info {
+  border-top: 3px solid orange;
+  border-bottom: 3px solid orange;
+  padding: 30px;
+  width: 100%;
+  background:#fff;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+
+.info svg {
+  margin-right: 15px;
+  color: #eb5d1e;
+  float: left;
+  width: 44px;
+  height: 44px;
+  background-color:#fef8f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
+}
+
+.info svg:hover {
+  color:white;
+  background-color:#eb5d1e;
+}
+
+.info h4 {
+  padding: 0 0 0 60px;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color:#7a6960;
+}
+
+.info p {
+padding: 0 0 10px 60px;
+font-size: 14px;
+margin-bottom: 20px;
+color:#ab9d95;
+}
+
+
+
+/* Join section */
+ .join-section {
+  background-color: #fef8f5;
+ }
+
+
+
+ /* Footer section */
+
+ .list-item {
+  margin-bottom: 0;
+ }
+.list-item-title {
+  padding-bottom: 15px;
+}
+ .list-item-link {
+  margin-bottom: 15px;
+ }
+
+ .cursor-item {
+  color:#f39e7a;
+ }
+ .list-item-link a {
+  color: #5c5c5c;
+  transition: color 0.4s ease;
+  text-decoration: none!important;
+
+ }
+
+ .list-item-link a:hover {
+  color:#ef7f4d;
+
+ }
+
+
+ .social-networks a {
+    font-size: 18px;
+    display: inline-block;
+    background: #eb5d1e;
+    color: #fff;
+    line-height: 1;
+    padding: 7px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s ease;
+}
+
+.social-networks a:hover {
+  opacity: 0.8;
+}
+
+.last-footer-part {
+  background-color: #fef8f5;
+}
+
+.credit {
+  float: right;
+  text-align: end;
+  font-size: 16px;
+}
+
+
+.credit a {
+  text-decoration: none;
 }
